--- a/index.html
+++ b/index.html
@@ -6,15 +6,76 @@
   <link rel="icon" type="image/svg+xml" href="/vite.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description"
-    content="Noticias Región 24h - Tu fuente confiable de información regional las 24 horas del día" />
-  <title>Noticias Región 24h Landing Page</title>
-  <meta property="og:title" content="Noticias Región 24h" />
+    content="NOTICIAS 24H (antes Región 24H) - Tu fuente confiable de información peruana y regional las 24 horas del día. Noticias de último minuto, noticias 24 horas." />
+  <meta name="keywords"
+    content="noticias 24 H, noticias 24 horas, region 24 h, region 24 horas, noticias region 24h, noticias peru, actualidad regional, periodismo independiente" />
+  <meta name="robots" content="index, follow" />
+  <link rel="canonical" href="https://noticias24h.pe" />
+  <title>NOTICIAS 24H | Periodismo Independiente</title>
+  <meta property="og:title" content="NOTICIAS 24H | Periodismo Independiente" />
+  <meta property="og:site_name" content="NOTICIAS 24H" />
   <meta property="og:description" content="Tu fuente confiable de información regional las 24 horas del día" />
-  <meta property="og:image" content="https://bolt.new/static/og_default.png" />
+  <meta property="og:image" content="https://noticias24h.pe/og-image.png" />
   <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:title" content="Noticias Región 24h" />
+  <meta name="twitter:title" content="NOTICIAS 24H | Periodismo Independiente" />
   <meta name="twitter:description" content="Tu fuente confiable de información regional las 24 horas del día" />
-  <meta name="twitter:image" content="https://bolt.new/static/og_default.png" />
+  <meta name="twitter:image" content="https://noticias24h.pe/og-image.png" />
+  <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@graph": [
+        {
+          "@type": "NewsMediaOrganization",
+          "name": "NOTICIAS 24H",
+          "url": "https://noticias24h.pe",
+          "logo": "https://noticias24h.pe/logo.png",
+          "sameAs": [
+            "https://www.facebook.com/noticias24h",
+            "https://twitter.com/noticias24h",
+            "https://www.youtube.com/noticias24h"
+          ]
+        },
+        {
+          "@type": "WebSite",
+          "url": "https://noticias24h.pe",
+          "potentialAction": {
+            "@type": "SearchAction",
+            "target": "https://noticias24h.pe/?s={search_term_string}",
+            "query-input": "required name=search_term_string"
+          }
+        },
+        {
+          "@type": "ItemList",
+          "itemListElement": [
+            {
+              "@type": "ListItem",
+              "position": 1,
+              "name": "Nacionales",
+              "url": "https://noticias24h.pe/nacionales"
+            },
+            {
+              "@type": "ListItem",
+              "position": 2,
+              "name": "Deportes",
+              "url": "https://noticias24h.pe/deportes"
+            },
+            {
+              "@type": "ListItem",
+              "position": 3,
+              "name": "Economía",
+              "url": "https://noticias24h.pe/economia"
+            },
+            {
+              "@type": "ListItem",
+              "position": 4,
+              "name": "Internacionales",
+              "url": "https://noticias24h.pe/internacionales"
+            }
+          ]
+        }
+      ]
+    }
+  </script>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link
